[package]
name = "wmf"
version = "0.1.0"
authors = ["Alexander Filatov <30194859+iwiwsb@users.noreply.github.com>"]
edition = "2021"
description = "Library to work with Windows Metafile Format (WMF)"
categories = ["parsing", "parser-implementations", "multimedia::images"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
